# prir

./: .gitignore  CMakeLists.txt  bradley.cpp  disarium.cpp
CUDA/: CMakeLists.txt  bradley.cpp  bradley.cu  bradley_benchmark.sh  cudaUtils.cuh  disarium.cu  disarium_benchmark.sh
CUDA/doc/: prir_Grzegorz_Król_Marcin_Kurdziel_lab3.tex
CUDA/kernels/: adaptive_thresholding.cu  adaptive_thresholding.cuh  disarium_number.cu  disarium_number.cuh
MPI/: CMakeLists.txt  bradley.cpp  bradley_serial.cpp  disarium.cpp  disarium_serial.cpp
MPI/doc/: prir_Grzegorz_Król_Marcin_Kurdziel_lab2.tex
MPI/lib/: adaptive_thresholding.cpp  adaptive_thresholding.hpp  benchmarking.hpp  disarium_number.cpp  disarium_number.hpp
cmake/: FindOpenCV.cmake
include/: adaptive_thresholding.hpp  benchmarking.hpp
lib/: adaptive_thresholding.cpp  benchmarking.hpp  disarium_number.hpp
openMP/: CMakeLists.txt  bradley.cpp  disarium.cpp
openMP/doc/: prir_Grzegorz_Król_Marcin_Kurdziel_lab1.tex
openMP/lib/: adaptive_thresholding.cpp  adaptive_thresholding.hpp  disarium_number.cpp
